# Climate-Portal

./: .gitignore  .replit  DO_THIS_FIRST.txt  FREE_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  app.py  authenticate_gee.py  config.py  env.example  pyproject.toml  replit.md  requirements.txt  setup_database.py  start_server.bat
.local/state/replit/agent/: progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted--REPLIT-DEVELOPMENT-PROMPT-CLIMATE-INFORMATION-PORTAL-OF-PAKISTAN-PROJECT-OVERVIEW-Create-a-f-1760530392120_1760530392126.txt
frontend/: CLIMATE_PORTAL_README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: About.tsx  Dashboard.tsx  DataExplorer.tsx  Download.tsx  DroughtIndices.tsx  ExtremeEvents.tsx  Forecast.tsx  HeatStress.tsx  LandingPage.tsx  MainDashboard.tsx  MapViewer.tsx  PrecipitationAnalysis.tsx  SettingsPage.tsx  TemperatureAnalysis.tsx  TimeSeries.tsx
modules/: __init__.py  cache.py  climate_indices.py  data_fetcher.py  database.py  geemap_helper.py  ml_models.py  spatial_processor.py  utils.py
static/css/: style.css
static/data/: pakistan_boundaries.geojson
static/js/: charts.js  main.js  map.js
templates/: about.html  base.html  download.html  forecast.html  index.html  map_viewer.html  time_series.html
